# RoR2-Savefile-Editor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: achievement.h  achievementframe.h  achievementlist.h  app.h  clickabletext.h  frame.h  mainframe.h
src/: achievement.cpp  achievementframe.cpp  app.cpp  clickabletext.cpp  frame.cpp  main.cpp  mainframe.cpp
